--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 									    <a class="nav-link active py-2" data-toggle="tab" href="#atuacao">Atuação</a>
 									  </li>
 									  <li class="nav-item px-lg-2 mb-md-0 mb-2">
-									    <a class="nav-link py-2" data-toggle="tab" href="#concurso">Our Vision</a>
+									    <a class="nav-link py-2" data-toggle="tab" href="#concurso">Para Concursos</a>
 									  </li>
 									  <li class="nav-item">
-									    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#servidores">Our Value</a>
+									    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#servidores">Para Servidores</a>
 									  </li>
 									</ul>
 									<div class="tab-content bg-light rounded mt-2">
