--- a/about.html
+++ b/about.html
@@ -26,23 +26,22 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Legalcare <span>A Law Firm Agency</span></a>
+	      <img src="images/logo.png" class="img-fluid" width="150px"  alt="Smiley face">
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
+        <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="attorneys.html" class="nav-link">Attorneys</a></li>
-	          <li class="nav-item"><a href="practice-areas.html" class="nav-link">Practice Areas</a></li>
-	          <li class="nav-item"><a href="case.html" class="nav-link">Case Studies</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="#" class="nav-link">Free Consultation</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="https://juleikapatricia.com.br/#diferenciais" class="nav-link">Por quê nos escolher?</a></li>
+	          <li class="nav-item"><a href="https://juleikapatricia.com.br/#sobre" class="nav-link">Sobre</a></li>
+	          <li class="nav-item"><a href="https://juleikapatricia.com.br/#sobre" class="nav-link">Atuação</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">A Juleika Patrícia</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
+	          <li class="nav-item cta"><a href="https://juleikapatricia.com.br/#contato" class="nav-link">Contato</a></li>
 	        </ul>
-	      </div>
+	      </div>  
 	    </div>
 	  </nav>
     <!-- END nav -->
@@ -52,8 +51,8 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h1 class="mb-3 bread">About Us</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
+            <h1 class="mb-3 bread">Juleika P. Albuquerque</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span> A Juleika Patrícia<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
       </div>
@@ -63,39 +62,27 @@
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex">
-    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(images/about.jpg);">
-    					<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-    						<span class="icon-play"></span>
-    					</a>
+    				<div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-end" style="background-image:url(images/sobre.png);">
+    					<span class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    						<span class="icon-arrow-right"></span>
+              </span>
     				</div>
     			</div>
     			<div class="col-md-6 pl-md-5 py-md-5">
     				<div class="row justify-content-start pt-3 pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<span class="subheading">Welcome to Legalcare</span>
-		            <h2 class="mb-4">We Always Fight For Your Justice to Win</h2>
+		          	<span class="subheading">Me conheça um pouco mais</span>
+		            <h2 class="mb-4">Juleika P. Albuquerque</h2>
 		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
 		            <div class="tabulation-2 mt-4">
 									<ul class="nav nav-pills nav-fill d-md-flex d-block">
 									  <li class="nav-item mb-md-0 mb-2">
-									    <a class="nav-link active py-2" data-toggle="tab" href="#home1">Our Mission</a>
-									  </li>
-									  <li class="nav-item px-lg-2 mb-md-0 mb-2">
-									    <a class="nav-link py-2" data-toggle="tab" href="#home2">Our Vision</a>
-									  </li>
-									  <li class="nav-item">
-									    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#home3">Our Value</a>
+									    <a class="nav-link active py-2" data-toggle="tab" href="#home1">Sobre mim</a>
 									  </li>
 									</ul>
 									<div class="tab-content bg-light rounded mt-2">
 									  <div class="tab-pane container p-0 active" id="home1">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									  </div>
-									  <div class="tab-pane container p-0 fade" id="home2">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									  </div>
-									  <div class="tab-pane container p-0 fade" id="home3">
-									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									  	<p>Sou Juleika Patricia Albuquerque de Barros, Advogada atuante, casada, mãe, Pernambucana, com vasta experiência em causas de concursos públicos e servidores públicos, já tendo atuado inclusive, como advogada contratada de banca organizadora, pós graduanda em Direito Administrativo e Direito Público.</p>
 									  </div>
 									</div>
 								</div>
@@ -112,28 +99,28 @@
     	</div>
     </section>
 
-		<section class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_2.jpg);">
+		<section id="contato" class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_2.jpg);">
 			<div class="overlay"></div>
     	<div class="container">
     		<div class="row d-md-flex justify-content-end">
     			<div class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white">
-    				<span class="subheading">Booking an Appointment</span>
-    				<h2 class="mb-4">Free Consultation</h2>
-    				<form action="#" class="consultation">
+    				<span class="subheading">Envie-nos uma mensagem.</span>
+    				<h2 class="mb-4">Contato</h2>
+    		<form action="#" class="consultation">
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Your Name">
+	              <input type="text" class="form-control" placeholder="Seu nome">
 	            </div>
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Your Email">
+	              <input type="text" class="form-control" placeholder="Seu e-mail">
 	            </div>
 	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Subject">
+	              <input type="text" class="form-control" placeholder="Assunto">
 	            </div>
 	            <div class="form-group">
-	              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+	              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensagem"></textarea>
 	            </div>
 	            <div class="form-group">
-	              <input type="submit" value="Send message" class="btn btn-dark py-3 px-4">
+	              <input type="submit" value="Enviar" class="btn btn-dark py-3 px-4">
 	            </div>
 	          </form>
     			</div>
@@ -146,8 +133,8 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-          	<span class="subheading">Testimonial</span>
-            <h2 class="mb-4">Happy Clients</h2>
+          	<span class="subheading">Depoimentos</span>
+            <h2 class="mb-4">O que estão falando sobre nós</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -156,7 +143,11 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Hoje finalmente recebi a vitória. Passei o dia na luta,
+						desde às 3hrs da manhã que comecei a correr atrás. Mais uma vez estou aqui 
+						para te agradecer por caminhar e vencer junto comigo. A batalha foi longa,
+						obrigado doutora, finalmente empossado.
+					</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
@@ -170,7 +161,7 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Muito gratificante! Fui nomeado! Obrigado dra. Patrícia, hoje sou Policial Rodoviário Federal. Graças a Deus primeiramente, e ao seu excelente trabalho. Gratidão é a palavra!</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
@@ -184,7 +175,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Gostaria de te agradecer pelo êxito que obtivemos nesse processo. Você sempre paciente, me atualizando sobre o andamento
+						e explicando os próximos passos. Muito obrigado!
+					</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
                     	<div class="pl-3">
@@ -198,7 +191,9 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Só uma palavra para expressar meu sentimento com relação ao trabalho da dra. Patrícia: Gratidão. Obrigado do fundo do meu
+						coração. Que Deus te abençoe e com o seu excelente trabalho continue ajudando as pessoas a realizarem seus sonhos.
+					</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
@@ -212,7 +207,8 @@
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div class="text">
-                    <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p class="mb-4">Passando pra agradecer o empenho na ação, agora acho que chegou ao fim. Continue seu trabalho, pois nós que precisamos de excelentesprofissionais para garantir nossos direitos. Mais uma vitória pra conta.
+					</p>
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
@@ -256,7 +252,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="#">Legalcare <span>A Law Firm Agency</span></a></h2>
+              <h2 class="logo"><a href="#"><img src="images/logo.png" class="img-fluid" width="200px"  alt="logo"></a></h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -267,35 +263,28 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Practice Areas</h2>
+              <h2 class="ftco-heading-2">Áreas de atuação</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Family Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Business Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Insurance Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Criminal Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Drug Offenses</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Fire Accident</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Employment Law</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Property Law</a></li>
-
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Direito para Consursos Públicos</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Direito para Servidores Públicos</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Endereço</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Rua Maestro Nelson Ferreira, 459, Piedade, Jaboatão dos Guararapes-PE, CEP : 54410-220</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+55 81 9 8732-5136</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">contato@juleikapatricia.com.br</span></a></li>
 	              </ul>
 	            </div>
             </div>
           </div>
           <div class="col-md">
              <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Business Hours</h2>
+              <h2 class="ftco-heading-2">Funcionamento:</h2>
               <div class="opening-hours">
               	<h4>Opening Days:</h4>
               	<p class="pl-3">
@@ -315,7 +304,13 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados.<br>
+   Juleika Patrícia Albuquerque de Barros |
+
+ 
+ OAB-PE 36.696
+ <br>
+  Modelo disponibilizado por <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
