--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <link rel="stylesheet" href="css/aos.css">
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+	<link rel="stylesheet" href="css/ionicons.min.css">
+	
+	<link rel="icon" href="images/icon.png" />
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
@@ -26,7 +28,8 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Legalcare <span>A Law Firm Agency</span></a>
+		  <!-- <a class="navbar-brand" href="index.html">Legalcare <span>A Law Firm Agency</span></a> -->
+		  <img src="images/logo.png" class="img-fluid" width="150px"  alt="Smiley face">
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -37,7 +40,7 @@
 	          <li class="nav-item"><a href="#diferenciais" class="nav-link">Por quê nos escolher?</a></li>
 	          <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
 	          <li class="nav-item"><a href="#sobre" class="nav-link">Atuação</a></li>
-	          <li class="nav-item"><a href="case.html" class="nav-link">Case Studies</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">A Juleika Patrícia</a></li>
 	          <li class="nav-item"><a href="#" class="nav-link">Notícias</a></li>
 	          <li class="nav-item cta"><a href="#contato" class="nav-link">Contato</a></li>
 	        </ul>
@@ -51,7 +54,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-7 ftco-animate">
-          	<h2 class="subheading">Bem-vindo(a) à Juleika Patrícia</h2>
+          	<h2 class="subheading">Você chegou ao lugar certo!</h2>
           	<h1>Advocacia especializada em
 						  <span
 						     class="txt-rotate"
@@ -88,7 +91,7 @@
 		    						<h3>Harmonia</h3>
 		    						<p>Nosso cliente é atendido desde a consulta até o final do processo pelo mesmo advogado, para que dessa forma possa ser criado um ambiente harmônico e de confiança.</p>
 		    					</div>
-		    					<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+		    					<a href="#sobre" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-down"></span></a>
 		    				</div>
 		    			</div>
 		    			<div class="col-md-4 d-flex align-items-stretch">
@@ -100,7 +103,7 @@
 		    						<h3>Cuidado</h3>
 		    						<p>O diferencial do nosso escritório no cuidado com os nossos processos, é a defesa em tribuna com sustentação oral nas demandas que defendemos.</p>
 		    					</div>
-		    					<a href="#" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+		    					<a href="#sobre" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-down"></span></a>
 		    				</div>
 		    			</div>
 		    			<div class="col-md-4 d-flex align-items-stretch">
@@ -112,7 +115,7 @@
 		    						<h3>Agilidade</h3>
 		    						<p>Protocolamos as demandas sempre o mais rápido possível, para buscar sanar o problema do nosso cliente com maior agilidade possível.</p>
 		    					</div>
-		    					<a href="#contato" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-forward"></span></a>
+		    					<a href="#sobre" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-down"></span></a>
 		    				</div>
 		    			</div>
     				</div>
@@ -137,7 +140,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<span class="subheading">Me conheça um pouco mais</span>
 		            <h2 class="mb-4">Juleika P. Albuquerque</h2>
-		            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+		            <p>Conheça um pouco mais do meu trabalho e as áreas em que atuo.</p>
 		            <div class="tabulation-2 mt-4">
 									<ul class="nav nav-pills nav-fill d-md-flex d-block">
 									  <li class="nav-item mb-md-0 mb-2">
@@ -570,7 +573,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="#">Legalcare <span>A Law Firm Agency</span></a></h2>
+              <h2 class="logo"><a href="#"><img src="images/logo.png" class="img-fluid" width="200px"  alt="logo"></a></h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
