Alteração de copy

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	          <div class="heading-section ftco-animate">
 	          	<span class="subheading">Diferenciais</span>
 	            <h2 class="mb-4">Por quê nos escolher?</h2>
-	            <p>A nossa experiência fizeram do escritório de advocacia Juleika Patricia Albuquerque referência no direito administrativo em matéria de concurso público.</p>
+	            <p>A nossa experiência fez do escritório de advocacia Juleika Patricia Albuquerque referência no direito administrativo em matéria de concurso público.</p>
 	            <p><a href="#contato" class="btn btn-primary py-3 px-4">Entre em contato</a></p>
 	          </div>
     			</div>
