--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Legalcare - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Juleika Patrícia | Advocacia Especializada em Concursos Públicos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="//code.jivosite.com/widget/PtlUsjjDbw" async></script>
   </head>
   <body>
     
