--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
+	
+	<script src="//code.jivosite.com/widget/PtlUsjjDbw" async></script>
   </head>
   <body>
     
