--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
           <div class="col-md-7 ftco-animate">
           	<h2 class="subheading">Você chegou ao lugar certo!</h2>
           	<h1>Advocacia especializada em
-						  <span
-						     class="txt-rotate"
-						     data-period="1000"
-						     data-rotate='[ "concursos públicos.", "servidores públicos."]'></span>
+				<span> concursos públicos</span> e <span>servidores públicos.</span>
 						</h1>
             <!-- <h1 class="mb-4">Attorneys Fighting For Your Freedom</h1> -->
             <p class="mb-4">Por todos os diferenciais que temos, nos posicionamos como a melhor equipe para o seu caso. Quer saber o porquê? Clique no botão abaixo e conheça!</p>
@@ -69,7 +66,12 @@
           </div>
         </div>
       </div>
-    </div>
+	</div>
+	
+	<!-- <span
+						     class="txt-rotate"
+						     data-period="1000"
+						     data-rotate='[ "concursos públicos.", "servidores públicos."]'></span> -->
 
       <section id="diferenciais" class="ftco-section ftco-no-pt">
     	<div class="container">
@@ -77,7 +79,7 @@
     			<div class="col-lg-3 py-5">
 	          <div class="heading-section ftco-animate">
 	          	<span class="subheading">Diferenciais</span>
-	            <h2 class="mb-4">Por quê nos escolher?</h2>
+	            <h2 class="mb-4">Por que nos escolher?</h2>
 	            <p>A nossa experiência fez do escritório de advocacia Juleika Patricia Albuquerque referência no direito administrativo em matéria de concurso público.</p>
 	            <p><a href="#contato" class="btn btn-primary py-3 px-4">Entre em contato</a></p>
 	          </div>
