--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		    					</div>
 		    					<div class="text">
 		    						<h3>Cuidado</h3>
-		    						<p>O diferencial do nosso escritório no cuidado com os nossos processos, é a defesa em tribuna com sustentação oral nas demandas que defendemos.</p>
+		    						<p>O diferencial dos nossos serviços é o foco no cliente, buscando garantir a concretização de seus direitos, pautando-se na Lei, nos fatos e na ética.</p>
 		    					</div>
 		    					<a href="#sobre" class="btn-custom d-flex align-items-center justify-content-center"><span class="ion-ios-arrow-round-down"></span></a>
 		    				</div>
@@ -150,29 +150,29 @@
 									  <li class="nav-item mb-md-0 mb-2">
 									    <a class="nav-link active py-2" data-toggle="tab" href="#atuacao">Atuação</a>
 									  </li>
-									  <li class="nav-item px-lg-2 mb-md-0 mb-2">
+									  <!-- <li class="nav-item px-lg-2 mb-md-0 mb-2">
 									    <a class="nav-link py-2" data-toggle="tab" href="#concurso">Para Concursos</a>
 									  </li>
 									  <li class="nav-item">
 									    <a class="nav-link py-2 mb-md-0 mb-2" data-toggle="tab" href="#servidores">Para Servidores</a>
-									  </li>
+									  </li> -->
 									</ul>
 									<div class="tab-content bg-light rounded mt-2">
 									  <div class="tab-pane container p-0 active" id="atuacao">
 									  	<p>Atuamos desde as instâncias primárias até os tribunais superiores, diligências feitas diretamente pelo advogado da causa, e o nosso cliente é atendido desde a consulta até o final do processo pelo mesmo advogado, para que dessa forma possa ser criado um ambiente harmônico e de confiança.</p>
 									  </div>
-									  <div class="tab-pane container p-0 fade" id="concurso">
+									  <!-- <div class="tab-pane container p-0 fade" id="concurso">
 									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 									  </div>
 									  <div class="tab-pane container p-0 fade" id="servidores">
 									  	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									  </div>
+									  </div> -->
 									</div>
 								</div>
 		            <div class="years d-flex mt-4 mt-md-5">
 		            	<h4>
-			            	<span class="number mr-2" data-number="40">0</span>
-				            <span>Years of Experienced</span>
+			            	<span class="number mr-2" data-number="7">0</span>
+				            <span>anos de atuação</span>
 			            </h4>
 		            </div>
 		          </div>
@@ -182,7 +182,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section">
+    <!-- <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-10 text-center heading-section ftco-animate">
@@ -232,7 +232,7 @@
         	</div>
         </div>
     	</div>
-    </section>
+    </section> -->
 
     <!-- <section class="ftco-section ftco-no-pt">
     	<div class="container-fluid px-md-5">
@@ -344,34 +344,7 @@
     </section> -->
 		
 
-		<section id="contato" class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_2.jpg);">
-			<div class="overlay"></div>
-    	<div class="container">
-    		<div class="row d-md-flex justify-content-end">
-    			<div class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white">
-    				<span class="subheading">Envie-nos uma mensagem.</span>
-    				<h2 class="mb-4">Contato</h2>
-    		<form action="#" class="consultation">
-	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Seu nome">
-	            </div>
-	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Seu e-mail">
-	            </div>
-	            <div class="form-group">
-	              <input type="text" class="form-control" placeholder="Assunto">
-	            </div>
-	            <div class="form-group">
-	              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensagem"></textarea>
-	            </div>
-	            <div class="form-group">
-	              <input type="submit" value="Enviar" class="btn btn-dark py-3 px-4">
-	            </div>
-	          </form>
-    			</div>
-    		</div>
-    	</div>
-    </section>
+		
 
 
     <section class="ftco-section testimony-section">
@@ -393,13 +366,13 @@
 						para te agradecer por caminhar e vencer junto comigo. A batalha foi longa,
 						obrigado doutora, finalmente empossado.
 					</p>
-                    <div class="d-flex align-items-center">
+                    <!-- <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                    	<div class="pl-3">
+                    	 <div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
-		                  </div>
-	                  </div>
+		                  </div> 
+	                  </div> -->
                   </div>
                 </div>
               </div>
@@ -407,13 +380,13 @@
                 <div class="testimony-wrap py-4">
                   <div class="text">
                     <p class="mb-4">Muito gratificante! Fui nomeado! Obrigado dra. Patrícia, hoje sou Policial Rodoviário Federal. Graças a Deus primeiramente, e ao seu excelente trabalho. Gratidão é a palavra!</p>
-                    <div class="d-flex align-items-center">
+                    <!-- <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
-	                  </div>
+	                  </div> -->
                   </div>
                 </div>
               </div>
@@ -423,13 +396,13 @@
                     <p class="mb-4">Gostaria de te agradecer pelo êxito que obtivemos nesse processo. Você sempre paciente, me atualizando sobre o andamento
 						e explicando os próximos passos. Muito obrigado!
 					</p>
-                    <div class="d-flex align-items-center">
+                    <!-- <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
-	                  </div>
+	                  </div> -->
                   </div>
                 </div>
               </div>
@@ -439,13 +412,13 @@
                     <p class="mb-4">Só uma palavra para expressar meu sentimento com relação ao trabalho da dra. Patrícia: Gratidão. Obrigado do fundo do meu
 						coração. Que Deus te abençoe e com o seu excelente trabalho continue ajudando as pessoas a realizarem seus sonhos.
 					</p>
-                    <div class="d-flex align-items-center">
+                    <!-- <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
-	                  </div>
+	                  </div> -->
                   </div>
                 </div>
               </div>
@@ -454,13 +427,13 @@
                   <div class="text">
                     <p class="mb-4">Passando pra agradecer o empenho na ação, agora acho que chegou ao fim. Continue seu trabalho, pois nós que precisamos de excelentesprofissionais para garantir nossos direitos. Mais uma vitória pra conta.
 					</p>
-                    <div class="d-flex align-items-center">
+                    <!-- <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
 		                    <p class="name">Roger Scott</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
-	                  </div>
+	                  </div> -->
                   </div>
                 </div>
               </div>
@@ -468,9 +441,38 @@
           </div>
         </div>
       </div>
-    </section>
+	</section>
+	
+	<section id="contato" class="ftco-consultation ftco-section ftco-no-pt ftco-no-pb img" style="background-image: url(images/bg_2.jpg);">
+		<div class="overlay"></div>
+	<div class="container">
+		<div class="row d-md-flex justify-content-end">
+			<div class="col-md-6 half p-3 py-5 pl-md-5 ftco-animate heading-section heading-section-white">
+				<span class="subheading">Envie-nos uma mensagem.</span>
+				<h2 class="mb-4">Contato</h2>
+		<form action="mailer/mailer.php" class="consultation">
+			<div class="form-group">
+			  <input type="text" class="form-control" placeholder="Seu nome">
+			</div>
+			<div class="form-group">
+			  <input type="text" class="form-control" placeholder="Seu e-mail">
+			</div>
+			<div class="form-group">
+			  <input type="text" class="form-control" placeholder="Assunto">
+			</div>
+			<div class="form-group">
+			  <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Mensagem"></textarea>
+			</div>
+			<div class="form-group">
+			  <input type="submit" value="Enviar" class="btn btn-dark py-3 px-4">
+			</div>
+		  </form>
+			</div>
+		</div>
+	</div>
+</section>
 
-    <section class="ftco-section bg-light">
+    <!-- <section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -570,7 +572,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
@@ -578,7 +580,7 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="logo"><a href="#"><img src="images/logo.png" class="img-fluid" width="200px"  alt="logo"></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>O diferencial dos nossos serviços é o foco no cliente, buscando garantir a concretização de seus direitos, pautando-se na Lei, nos fatos e na ética.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -607,7 +609,7 @@
 	            </div>
             </div>
           </div>
-          <div class="col-md">
+          <!-- <div class="col-md">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Funcionamento:</h2>
               <div class="opening-hours">
@@ -623,7 +625,7 @@
               	</p>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
