--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     	</div>
     </section>
 
-    <!-- <section class="ftco-section">
+     <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-10 text-center heading-section ftco-animate">
@@ -232,7 +232,7 @@
         	</div>
         </div>
     	</div>
-    </section> -->
+    </section> 
 
     <!-- <section class="ftco-section ftco-no-pt">
     	<div class="container-fluid px-md-5">
